--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://akhilpamwani.github.io/javaprogram",
+  
     "name": "java",
     "version": "0.1.0",
     "private": true,
@@ -21,8 +21,7 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build",
+        
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
@@ -45,7 +44,7 @@
         ]
     },
     "devDependencies": {
-        "babel-plugin-prismjs": "^2.1.0",
-        "gh-pages": "^3.2.3"
+        "babel-plugin-prismjs": "^2.1.0"
+        
     }
 }
